--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yusukezzz/slim-debugbar",
+    "name": "quietasice/slim-debugbar",
     "license": "MIT",
     "keywords": ["slim", "middleware", "debugbar"],
     "require": {
